--- a/src/styles/comments.css
+++ b/src/styles/comments.css
@@ -1,4 +1,7 @@
-.comments {
+.comments-container {
     max-width: 60%;
+}
+
+.comments {
     gap: var(--space-500);
 }
